--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -18,10 +18,28 @@
     "internet": "Интернет",
     "marketing": "Маркетинг",
     "for_your_business": "Для Вашего бизнеса и личного бренда",
-    "advertising_agency": "Рекламное Агентство <br \\/>Полного Цикла"
+    "advertising_agency": "Рекламное Агентство <br \\/>Полного Цикла",
+    "about_1": {
+      "name": "О нас",
+      "description": "Мы — маркетинговое агентство полного цикла. Наша команда соединяет стратегию, креатив и аналитику, чтобы ваш бизнес развивался быстрее конкурентов. Мы понимаем рынок и говорим на языке цифр, а не обещаний."
+    },
+    "about_2": {
+      "name": "В digital-индустрии",
+      "description": "Это наш фундамент. Мы прошли вместе с рынком путь от первых SMM-экспериментов до продвинутой аналитики и автоматизации. Теперь этот опыт работает на вас."
+    },
+    "about_3": {
+      "name": "Реализованных проектов в 5 странах",
+      "description": "За это время мы накопили практический опыт работы в разных нишах и с компаниями любого масштаба — от локальных стартапов до международных брендов."
+    },
+    "about_4": {
+      "name": "Индекс удовлетворенности заказчиков *",
+      "description": "Это не просто цифра, а подтверждение того, что мы умеем слышать задачи бизнеса и превращать их в результат.",
+      "notice": "* согласно проведенному исследованию Oyster Computer от 24.11.2023"
+    }
   },
   "text": {
     "close": "Закрыть",
-    "lets_discuss": "Давайте обсудим"
+    "lets_discuss": "Давайте обсудим",
+    "year": "Год | Лет"
   }
 }
