about section gsap animate

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -19,19 +19,19 @@
     "marketing": "Маркетинг",
     "for_your_business": "Для Вашего бизнеса и личного бренда",
     "advertising_agency": "Рекламное Агентство <br \\/>Полного Цикла",
-    "about_1": {
+    "about": {
       "name": "О нас",
       "description": "Мы — маркетинговое агентство полного цикла. Наша команда соединяет стратегию, креатив и аналитику, чтобы ваш бизнес развивался быстрее конкурентов. Мы понимаем рынок и говорим на языке цифр, а не обещаний."
     },
-    "about_2": {
+    "about_1": {
       "name": "В digital-индустрии",
       "description": "Это наш фундамент. Мы прошли вместе с рынком путь от первых SMM-экспериментов до продвинутой аналитики и автоматизации. Теперь этот опыт работает на вас."
     },
-    "about_3": {
+    "about_2": {
       "name": "Реализованных проектов в 5 странах",
       "description": "За это время мы накопили практический опыт работы в разных нишах и с компаниями любого масштаба — от локальных стартапов до международных брендов."
     },
-    "about_4": {
+    "about_3": {
       "name": "Индекс удовлетворенности заказчиков *",
       "description": "Это не просто цифра, а подтверждение того, что мы умеем слышать задачи бизнеса и превращать их в результат.",
       "notice": "* согласно проведенному исследованию Oyster Computer от 24.11.2023"
