--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -35,6 +35,38 @@
       "name": "Индекс удовлетворенности заказчиков *",
       "description": "Это не просто цифра, а подтверждение того, что мы умеем слышать задачи бизнеса и превращать их в результат.",
       "notice": "* согласно проведенному исследованию Oyster Computer от 24.11.2023"
+    },
+    "case_1": {
+      "name": "WATCHBOX Middle East",
+      "description": "Лидогенерация через Instagram / Facebook Ads (Ближний Восток)"
+    },
+    "case_2": {
+      "name": "YouDo",
+      "description": "Создание программного обеспечения. Участие в разработке мобильного приложения"
+    },
+    "case_3": {
+      "name": "CETUS Protocol",
+      "description": "Проведение маркетинговой кампании с элементами онбординга пользователей"
+    },
+    "case_4": {
+      "name": "ALLU Auction United Arab Emirates",
+      "description": "Лидогенерация при помощи контекстной рекламы Google Ads (ОАЭ и Гонконг)"
+    },
+    "case_5": {
+      "name": "OKX Crypto Exchange",
+      "description": "Участие в работах по редизайну платформы"
+    },
+    "case_6": {
+      "name": "Т-БАНК",
+      "description": "Создание презентаций финансовых продуктов"
+    },
+    "case_7": {
+      "name": "WISE TRANSFER",
+      "description": "Участие в работах по редизайну интернет-ресурсов"
+    },
+    "case_8": {
+      "name": "AX CAPITAL",
+      "description": "Проведение маркетинговой кампании для постоянных клиентов (Россия и ОАЭ)"
     }
   },
   "text": {
