--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -67,6 +67,86 @@
     "case_8": {
       "name": "AX CAPITAL",
       "description": "Проведение маркетинговой кампании для постоянных клиентов (Россия и ОАЭ)"
+    },
+    "service": {
+      "name": "Услуги",
+      "description": "Полный перечень маркетинговых инструментов и практик для масштабирования вашего бизнеса и продвижения личного бренда"
+    },
+    "seo_1": {
+      "name": "SEO",
+      "description": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
+    },
+    "seo_2": {
+      "name": "Контекстная реклама",
+      "description": "Воспользуйтесь самым результативным рекламным инструментом для лидогенерации при помощи Яндекс.Директ и Google Ads"
+    },
+    "seo_3": {
+      "name": "Социальные сети",
+      "description": "Продвижение в Instagram / TikTok / VK / Дзен / YouTube / RuTube / Snapchat / X (ex-Twitter)"
+    },
+    "seo_4": {
+      "name": "Instagram / Facebook Ads",
+      "description": "Запустите рекламу в Instagram / Facebook для быстрой генерации качественных лидов и новых клиентов"
+    },
+    "seo_5": {
+      "name": "SEO",
+      "description": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
+    },
+    "seo_6": {
+      "name": "Telegram Ads",
+      "description": "Продвигайте свой канал. Запускайте рекламу в Telegram Ads или в крупных популярных каналах"
+    },
+    "seo_7": {
+      "name": "SERM",
+      "description": "Управляйте репутацией бизнеса в Сети. Мы разместим положительные отзывы о вас на 100+ площадках"
+    },
+    "seo_8": {
+      "name": "Маркетплейс",
+      "description": "Продвигайте ваш магазинна крупнейших маркетплейсах. Авито / Ozon / Wildberries"
+    },
+    "seo_9": {
+      "name": "Crypto Marketing",
+      "description": "Развивайте интерес к своему проекту среди наиболее вовлеченной и платежеспособной аудитории крипто сообщества"
+    },
+    "seo_10": {
+      "name": "Лидеры мнений",
+      "description": "Закажите рекламу вашего бизнеса у популярных блогеров и лидеров мнений. Пригласите их на съемки вашего контента"
+    },
+    "seo_11": {
+      "name": "PR",
+      "description": "Повысьте узнаваемость бренда при помощи СМИ. Расскажите о себе на страницах крупных интернет-изданий"
+    },
+    "seo_12": {
+      "name": "Контент",
+      "description": "Закажите создание медиа контента для вашего сайта и социальных сетей. Reels / Видео / Мемы."
+    },
+    "seo_13": {
+      "name": "Рассылки",
+      "description": "Запустите E-mail / SMS / Telegram рассылку, чтобы сообщить потенциальным клиентам важные новости"
+    },
+    "seo_14": {
+      "name": "Facebook",
+      "description": "Заблокировали или не работает рекламный аккаунт? Решим проблемы с экосистемой FB. Оплата за результат"
+    },
+    "dev_1": {
+      "name": "Сайты",
+      "description": "Закажите разработку сайта или лендинга любой сложности"
+    },
+    "dev_2": {
+      "name": "Мобильные приложения",
+      "description": "Расширьте экосистему вашего бизнеса с мобильным приложением на iOS / Android"
+    },
+    "dev_3": {
+      "name": "Telegram-боты",
+      "description": "Воспользуйтесь функционалом Telegram для оптимизации бизнес-процессов. Закажите создание бота для любых целей"
+    },
+    "dev_4": {
+      "name": "Дизайн",
+      "description": "Полный перечень услуг веб-дизайна для вашего бизнеса: от создания логотипа до брендирования товаров и услуг"
+    },
+    "dev_5": {
+      "name": "Презентации",
+      "description": "Закажите профессиональную презентацию вашего бизнеса / товаров / услуг"
     }
   },
   "text": {
