sliders gsap-ed

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -152,6 +152,10 @@
   "text": {
     "close": "Close",
     "lets_discuss": "Let's discuss",
+    "promotion": "Promotion",
+    "development": "Development",
+    "back": "назад",
+    "forward": "вперед",
     "year": "Year | Years"
   }
 }
