--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -152,6 +152,10 @@
   "text": {
     "close": "Закрыть",
     "lets_discuss": "Давайте обсудим",
+    "promotion": "Продвижение",
+    "development": "Разработка",
+    "back": "назад",
+    "forward": "вперед",
     "year": "Год | Лет"
   }
 }
