--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -149,6 +149,82 @@
       "description": "Закажите профессиональную презентацию вашего бизнеса / товаров / услуг"
     }
   },
+  "price": {
+    "seo": "Прайс на продвижение",
+    "dev": "Прайс на разработку",
+    "seo_1": {
+      "name": "SEO-продвижение сайта",
+      "total": "от 70.000 ₽"
+    },
+    "seo_2": {
+      "name": "Контекстная реклама",
+      "total": "от 65.000 ₽"
+    },
+    "seo_3": {
+      "name": "Продвижение в соц. сетях",
+      "total": "от 60.000 ₽"
+    },
+    "seo_4": {
+      "name": "Instagram / Facebook Ads",
+      "total": "от 80.000 ₽"
+    },
+    "seo_5": {
+      "name": "Telegram Ads",
+      "total": "от 60.000 ₽"
+    },
+    "seo_6": {
+      "name": "SERM управление репутацией",
+      "total": "от 55.000 ₽"
+    },
+    "seo_7": {
+      "name": "Продвижение на маркетплейсах",
+      "total": "от 60.000 ₽"
+    },
+    "seo_8": {
+      "name": "Crypto Marketing",
+      "total": "от 110.000 ₽"
+    },
+    "seo_9": {
+      "name": "Работа с лидерами мнений",
+      "total": "от 60.000 ₽"
+    },
+    "seo_10": {
+      "name": "PR мероприятия",
+      "total": "от 60.000 ₽"
+    },
+    "seo_11": {
+      "name": "Создание медиаконтента",
+      "total": "от 40.000 ₽"
+    },
+    "seo_12": {
+      "name": "Рассылки",
+      "total": "от 25.000 ₽"
+    },
+    "seo_13": {
+      "name": "Помощь с экосистемой Facebook",
+      "total": "от 30.000 ₽"
+    },
+    "dev_1": {
+      "name": "Создание сайтов",
+      "total": "от 120.000 ₽"
+    },
+    "dev_2": {
+      "name": "Разработка мобильных приложений",
+      "total": "от 350.000 ₽"
+    },
+    "dev_3": {
+      "name": "Разработка Telegram-ботов",
+      "total": "от 40.000 ₽"
+    },
+    "dev_4": {
+      "name": "Веб-дизайн",
+      "total": "от 30.000 ₽"
+    },
+    "dev_5": {
+      "name": "Создание презентаций",
+      "total": "от 40.000 ₽"
+    }
+  },
   "text": {
     "close": "Закрыть",
     "lets_discuss": "Давайте обсудим",
