--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -225,6 +225,46 @@
       "total": "от 40.000 ₽"
     }
   },
+  "partner": {
+    "frame_1": {
+      "name": "Нас выбирают",
+      "desc": "Oyster Computer работает как с крупными компаниями, так и со стартапами."
+    },
+    "frame_2": {
+      "name": "Комплексный подход",
+      "desc": "От стратегии и брендинга до запуска рекламы и аналитики — мы закрываем полный цикл digital-маркетинга. Вам не нужно искать разных подрядчиков, всё под одной крышей."
+    },
+    "frame_3": {
+      "name": "Прозрачность и контроль",
+      "desc": "Вы всегда знаете, куда идут бюджеты и какие результаты приносит каждый канал. Предоставляем понятные отчёты и метрики эффективности."
+    },
+    "frame_4": {
+      "name": "Индивидуальные решения",
+      "desc": "Каждый проект — уникален. Мы не используем шаблонные подходы, а разрабатываем стратегию, которая работает именно для вашего бизнеса."
+    }
+  },
+  "team": {
+    "slide_1": {
+      "title": "Присоединяйся к команде",
+      "name": "",
+      "desc": "Экспертиза в области цифрового маркетинга позволяет нам быстро принимать решения и демонстрировать серьезные результаты. У нас есть открытые вакансии. Оставьте заявку на сайте со своими контактными данными, чтобы узнать больше."
+    },
+    "slide_2": {
+      "title": "Присоединяйся к команде",
+      "name": "Возможность",
+      "desc": "Для нас не имеют значения внешность, возраст, локация или взгляды кандидата. Важны только талант, умение трудиться, желание развиваться и возможность всегда быть на связи."
+    },
+    "slide_3": {
+      "title": "Присоединяйся к команде",
+      "name": "Рост и обучение",
+      "desc": "Отсутствие знаний и опыта в той или иной сфере - не препятствие, а стимул к освоению нового направления деятельности. Мы проводим обучение на примере реальных кейсов и помогаем развивать свои навыки."
+    },
+    "slide_4": {
+      "title": "Присоединяйся к команде",
+      "name": "Хорошее вознаграждение",
+      "desc": "Мы обеспечим оплату любых инструментов, сервисов и нейросетей для комфортной работы, уровень дохода выше среднерыночных показателей и множество возможностей для получения премии. Мы уважаем труд, поэтому оплачиваем даже тестовые задания."
+    }
+  },
   "text": {
     "close": "Закрыть",
     "lets_discuss": "Давайте обсудим",
@@ -232,6 +272,9 @@
     "development": "Разработка",
     "back": "назад",
     "forward": "вперед",
-    "year": "Год | Лет"
+    "year": "Год | Лет",
+    "design": "Дизайн",
+    "content": "Контент",
+    "targeted_advertising": "Таргетированная реклама"
   }
 }
